--- a/client/src/App.css
+++ b/client/src/App.css
@@ -77,6 +77,11 @@ body {
   color: black;
   cursor: pointer;
   opacity: 100%;
+  border-width: 1px;
+  border-color: black;
+  border-style: solid;
+  box-shadow: 2px 4px #888888;
+  border-radius: 5px;
 }
 
 .playlister-button:hover {
@@ -101,10 +106,22 @@ body {
   justify-content: center;
   font-size: 36pt;
 }
-
-#add-list-button {
-  float:left;
+#playlist-selector-heading{
+  font-size:36pt;
 }
+#add-list-button {
+ 
+  font-size:36pt;
+  border-width: 1px;
+  border-color: black;
+  border-style: solid;
+  box-shadow: 2px 4px #888888;
+  float:left;
+  color: black;
+  cursor: pointer;
+  border-radius: 5px;
+}
+
 
 .list-card, .selected-list-card, .unselected-list-card {
   font-size: 18pt;
@@ -138,6 +155,7 @@ body {
 .list-card-button {
   float:right;
   font-size:18pt;
+ 
 }
 
 input {
