fool proof design

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -245,6 +245,9 @@ input {
 #close-modal-button {
   float:right;
 }
+#cancel-modal-button{
+  float:left;
+}
 
 #confirm-cancel-container {
   text-align:center;
